test/message/syntactic-tail-call-in-binop-lhs.out
*%(basename)s:12: SyntaxError: Tail call expression is not allowed here
  return   continue f()   - a ;
           ^^^^^^^^^^^^
SyntaxError: Tail call expression is not allowed here
